# dl-res

./: .gitignore  Cargo.toml  README.md  main.py  requirements.txt  urls.txt
src/: main.rs
